force-app/main/default/objects/Trigger_Setup__c/Trigger_Setup__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to disable any trigger. Used during data migration activity.</description>
    <label>Trigger Setup</label>
</CustomObject>