force-app/main/default/objects/Trigger_Setup__c/fields/Account_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Account_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this check is active the account trigger will not work.</description>
    <label>Account Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>