force-app/main/default/objects/Trigger_Setup__c/fields/AccountContactJunction_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>AccountContactJunction_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this check is active the AccountContactJunction trigger will not work.</description>
    <label>AccountContactJunction Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>