force-app/main/default/objects/Trigger_Setup__c/fields/Endorsement_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this check is active the endorsement trigger will not work.</description>
    <label>Endorsement Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>