force-app/main/default/objects/Trigger_Setup__c/fields/Opportunity_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this check is active the opportunity trigger will not work.</description>
    <label>Opportunity Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>