force-app/main/default/objects/Trigger_Setup__c/fields/Policy_Claim_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Policy_Claim_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this check is active the Policy Claim trigger will not work.</description>
    <label>Policy Claim Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>