force-app/main/default/objects/Trigger_Setup__c/fields/Policy_Endorsement_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Policy_Endorsement_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this check is active the policy endorsement trigger will not work.</description>
    <label>Policy Endorsement Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>